# py_cw_3

./: README.md  pyproject.toml
src/: main.py  settings.py  utils.py
tests/: test_utils.py
tests/test_data/: test.json  test_sort_data.json
